[gd_scene load_steps=4 format=3 uid="uid://6huoh8opodh2"]

[ext_resource type="PackedScene" uid="uid://m0yyqaweebn7" path="res://addons/sv_mod_loader/interface/mod_array_editor/mod_array_editor.tscn" id="1_1mjct"]
[ext_resource type="Script" path="res://addons/sv_mod_loader/interface/mod_list_editor/mod_list_editor.gd" id="1_fvffs"]
[ext_resource type="PackedScene" uid="uid://ebaiksgghdwb" path="res://addons/sv_mod_loader/interface/new_mod_list_window/new_mod_list_window.tscn" id="3_a6cuf"]

[node name="ModListEditor" type="VBoxContainer" node_paths=PackedStringArray("mod_array_editor", "new_mod_list_window")]
offset_right = 512.0
offset_bottom = 512.0
size_flags_horizontal = 3
script = ExtResource("1_fvffs")
mod_array_editor = NodePath("ModArrayEditor")
new_mod_list_window = NodePath("NewModListWindow")

[node name="ModArrayEditor" parent="." instance=ExtResource("1_1mjct")]
layout_mode = 2

[node name="ReferenceRect" type="ReferenceRect" parent="."]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NewButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "New Mod List"

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Delete Mod List"

[node name="NewModListWindow" parent="." instance=ExtResource("3_a6cuf")]
visible = false

[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="HBoxContainer/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="confirm" from="NewModListWindow" to="." method="_on_new_mod_list_window_confirm"]
